# deepin-music

./: .gitignore  CMakeLists.txt  linglong.yaml
debian/: changelog
src/libdmusic/: presenter.cpp  presenter.h
src/libdmusic/core/: audioanalysis.cpp  datamanager.cpp  datamanager.h  dboperate.cpp  dboperate.h
src/libdmusic/player/: playerengine.cpp  playerengine.h
src/libdmusic/player/vlc/: sdlplayer.cpp
src/music-player/albumlist/: AlbumDefaultPage.qml  AlbumModel.qml
src/music-player/data/: deepin-music.desktop
src/music-player/mainwindow/: GlobalVariant.qml  MainWindow.qml  WindowTitlebar.qml
src/music-player/musicList/: AllMusicListDelegate.qml  AllMusicListModel.qml
src/music-player/musicbaseandsonglist/: SideBarItemDelegate.qml
src/music-player/playlist/: PlayListModel.qml
src/music-player/singerlist/: ArtistDefaultPage.qml  ArtistModel.qml
tests/: CMakeLists.txt  test-prj-running.sh
tests/libdmusic-test/: CMakeLists.txt  test_audioanalysis.cpp  test_audiodatadetector.cpp  test_cda.cpp  test_ckmeans.cpp  test_datamanager.cpp  test_global.cpp  test_lyricanalysis.cpp  test_main.cpp  test_playerengine.cpp  test_presenter.cpp  test_qtplayer.cpp  test_sdlplayer.cpp  test_utils.cpp  test_vlc.cpp  test_vlcplayer.cpp  ut-build-run.sh
tests/tst_music-player/: ut-build-run.sh
translations/: deepin-music_es.ts  deepin-music_ru.ts
translations/desktop/: desktop_ru.ts
